--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}My Task Manager{% endblock %}</title>
     <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/profile.css') }}">
   </head>
   <body>
     {% block body %}{% endblock %}
