modèle de Composants btn et pop up présents dans templates/components et reutilisables nimporte ou dans le code

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         {% block body %}{% endblock %}
     </main>
 
-    <footer class="bg-gray-800 text-white p-4 text-center">
+    <footer class="bg-yellow-500 text-black p-4 text-center">
     <p>&copy; 2024 Starshop. Tous droits réservés.</p>
 </footer>
 
