--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,18 +6,15 @@
     <title>{% block title %}My Application{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+    {{ encore_entry_link_tags('app') }}
 </head>
 <body>
-  
-    <main>
-        {% block body %}{% endblock %}
-    </main>
-
-    <footer class="bg-yellow-500 text-black p-4 text-center">
-    <p>&copy; 2024 Starshop. Tous droits réservés.</p>
-</footer>
-
+<main class="bg-beige">
+    {% block body %}{% endblock %}
+    <script src="{{ asset('build/app.js') }}"></script>
+    {{ encore_entry_script_tags('app') }}
+</main>
 </body>
 </html>
 
