--- a/templates/tasks/index.html.twig
+++ b/templates/tasks/index.html.twig
@@ -13,16 +13,21 @@
                             <div class="scrollable-column overflow-y-auto flex-grow px-2">
                                 <div class="space-y-8">
                                     {% for task in tasks %}
-                                        <div class="bg-beige p-4 m-4 mx-auto pb-0 rounded-2xl shadow-md task-card cursor-pointer"
+                                        <div class="bg-beige p-4 m-4 mx-auto rounded-2xl shadow-md task-card cursor-pointer h-[120px] flex flex-col justify-between"
                                              data-task-id="{{ task.id }}"
                                              data-task-title="{{ task.nomTache }}"
                                              data-task-description="{{ task.descriptionTache }}"
                                              data-task-date_debut="{{ task.DateDebut|date('d/m/Y') }}"
                                              data-task-date_echeance="{{ task.DateEcheance|date('d/m/Y') }}"
-                                             data-task-status="{{ task.status }}">
-                                            <h3 class="font-semibold text-sm mb-2">{{ task.nomTache }}</h3>
-                                            <p class="text-sm text-gray-600">{{ task.descriptionTache }}</p>
-                                            <div class="text-right pb-2">
+                                             data-task-status="{{ task.status }}"
+                                             data-task-users="{{ task.users|json_encode|e('html_attr') }}">
+                                            <div>
+                                                <h3 class="font-semibold text-sm mb-2">{{ task.nomTache }}</h3>
+                                                <p class="text-sm text-gray-600 line-clamp-2 h-[40px]">
+                                                    {{ task.descriptionTache }}
+                                                </p>
+                                            </div>
+                                            <div class="text-right">
                                                 <button class="text-gray-400 hover:text-gray-600 delete-task-btn">•••</button>
                                             </div>
                                         </div>
@@ -50,20 +55,20 @@
                 <div class="mt-3 px-7 py-3">
                     <div class="mb-6">
                         {{ form_label(taskForm.nom_tache, 'Name', {'label_attr': {'class': 'font-medium block text-left mb-2 ml-2'}}) }}
-                        {{ form_widget(taskForm.nom_tache, {'attr': {'class': 'flex w-full h-14 rounded-full border shadow-sm border-black text-center'}}) }}
+                        {{ form_widget(taskForm.nom_tache, {'attr': {'class': 'flex w-full h-14 rounded-full border shadow-sm border-black pl-4'}}) }}
                     </div>
                     <div class="mb-6">
                         {{ form_label(taskForm.description_tache, 'Description', {'label_attr': {'class': 'font-medium block text-left mb-2 ml-2'}}) }}
-                        {{ form_widget(taskForm.description_tache, {'attr': {'class': 'flex h-32 w-full rounded-2xl border shadow-sm border-black p-2'}}) }}
+                        {{ form_widget(taskForm.description_tache, {'attr': {'class': 'flex h-32 w-full rounded-2xl border shadow-sm border-black p-2 pl-4'}}) }}
                     </div>
                     <div class="flex flex-row space-x-4">
                         <div class="mb-6 flex-1">
                             {{ form_label(taskForm.date_debut, 'Start Date', {'label_attr': {'class': 'font-medium block text-left mb-2 ml-2'}}) }}
-                            {{ form_widget(taskForm.date_debut, {'attr': {'class': 'flex w-full h-14 rounded-full border shadow-sm border-black text-center'}}) }}
+                            {{ form_widget(taskForm.date_debut, {'attr': {'class': 'flex w-full h-14 rounded-full border shadow-sm border-black text-center pl-16'}}) }}
                         </div>
                         <div class="mb-6 flex-1">
                             {{ form_label(taskForm.date_echeance, 'End Date', {'label_attr': {'class': 'font-medium block text-left mb-2 ml-2'}}) }}
-                            {{ form_widget(taskForm.date_echeance, {'attr': {'class': 'flex w-full h-14 rounded-full border shadow-sm border-black text-center'}}) }}
+                            {{ form_widget(taskForm.date_echeance, {'attr': {'class': 'flex w-full h-14 rounded-full border shadow-sm border-black text-center pl-16'}}) }}
                         </div>
                     </div>
                 </div>
@@ -78,7 +83,7 @@
     </div>
 
     <div id="taskDetailsModal" class="hidden fixed inset-0 bg-beige bg-opacity-50 overflow-y-auto h-full w-full">
-        <div class="relative top-20 mx-auto py-5 px-16 border w-5/12 shadow-lg rounded-2xl bg-beige border-black">
+        <div class="relative top-20 mx-auto py-5 px-16 border w-6/12 shadow-lg rounded-2xl bg-beige border-black">
             <div class="mt-4">
                 <h1 id="taskTitle" class="text-2xl font-semibold mb-3 opacity-60"></h1>
                 <div class="flex flex-row gap-16">
@@ -97,29 +102,18 @@
                 </div>
                 <div class="flex flex-col">
                     <h3 class="text-lg text-gray-600 font-medium mb-2">Description</h3>
-                    <p id="taskDescription" class="text-md text-gray-700"></p>
+                    <p id="taskDescription" class="text-md text-justify text-gray-700"></p>
                 </div>
                 <div class="flex flex-col mt-8">
                     <h3 class="text-lg text-gray-600 font-medium mb-4">Assigned user(s)</h3>
-                    <div class="flex flex-row gap-6">
-                        <div class="flex flex-row w-max rounded-full border border-black bg-white pl-2 pr-4 py-1.5">
-                            <div class="rounded-full h-5 w-5 border border-black bg-yellow-300"></div>
-                            <p class="mx-2 text-sm">User 1</p>
-                        </div>
-                        <div class="flex flex-row w-max rounded-full border border-black bg-white pl-2 pr-4 py-1.5">
-                            <div class="rounded-full h-5 w-5 border border-black bg-yellow-300"></div>
-                            <p class="mx-2 text-sm">User 2</p>
-                        </div>
-                        <div class="flex flex-row w-max rounded-full border border-black bg-white pl-2 pr-4 py-1.5">
-                            <div class="rounded-full h-5 w-5 border border-black bg-yellow-300"></div>
-                            <p class="mx-2 text-sm">User 3</p>
-                        </div>
+                    <div id="taskUsers" class="flex flex-row gap-6">
+                        <!-- Users will be dynamically inserted here -->
                     </div>
                 </div>
             </div>
             <div class="mt-12 text-right mb-4">
                 <button id="closeTaskDetailsBtn" class="bg-primary border border-black text-black font-medium py-2.5 px-5 rounded-full">
-                    Close
+                    Edit Task
                 </button>
             </div>
         </div>
@@ -188,11 +182,26 @@
                         const date_debut = this.getAttribute('data-task-date_debut');
                         const date_echeance = this.getAttribute('data-task-date_echeance');
                         const status = this.getAttribute('data-task-status');
+                        const users = JSON.parse(this.getAttribute('data-task-users'));
+
                         document.getElementById('taskTitle').textContent = title;
                         document.getElementById('taskDescription').textContent = description;
                         document.getElementById('taskDateDebut').textContent = date_debut;
                         document.getElementById('taskDateEcheance').textContent = date_echeance;
                         document.getElementById('taskStatus').textContent = status;
+
+                        const usersContainer = document.getElementById('taskUsers');
+                        usersContainer.innerHTML = ''; // Clear previous users
+                        users.forEach(user => {
+                            const userElement = document.createElement('div');
+                            userElement.className = 'flex flex-row w-max rounded-full border border-black bg-white pl-2 pr-4 py-1.5';
+                            userElement.innerHTML = `
+                        <div class="rounded-full h-5 w-5 border border-black bg-yellow-300"></div>
+                        <p class="mx-2 text-sm">${user.username}</p>
+                    `;
+                            usersContainer.appendChild(userElement);
+                        });
+
                         taskDetailsModal.style.display = "block";
                     }
                 });
