--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -11,7 +11,7 @@
             <nav class=" flex flex-col flex-grow">
             <ul>
     <li class="px-6 py-4 hover:bg-yellow-100 border-t text-md font-semibold 
-        {% if app.request.attributes.get('_route') == 'dashboard' %} bg-yellow-100 {% endif %}">
+        {{ app.request.attributes.get('_route') == 'dashboard' ? 'bg-yellow-100' : '' }}">
         <a href="{{ path('dashboard') }}" class="flex items-center text-gray-700">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <rect x="3" y="3" width="7" height="7"></rect>
@@ -19,29 +19,33 @@
                 <rect x="14" y="14" width="7" height="7"></rect>
                 <rect x="3" y="14" width="7" height="7"></rect>
             </svg>
-            Dashboard
+            Tableaud de Bord
         </a>
     </li>
+    
     <li class="px-6 py-4 hover:bg-yellow-100 border-t text-md font-semibold 
-        {% if app.request.attributes.get('_route') == 'task_index' %} bg-yellow-100 {% endif %}">
+        {{ app.request.attributes.get('_route') == 'task_index' ? 'bg-yellow-300' : '' }}">
         <a href="{{ path('task_index') }}" class="flex items-center text-gray-700">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M9 11l3 3L22 4"></path>
                 <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"></path>
             </svg>
-            Tasks
+            Tâches
         </a>
     </li>
+    
     <li class="px-6 py-4 hover:bg-yellow-100 border-t text-md font-semibold 
-        {% if app.request.attributes.get('_route') == 'project_index' %} bg-yellow-100 {% endif %}">
+        {{ app.request.attributes.get('_route') == 'project_index' ? 'bg-yellow-100' : '' }}">
         <a href="{{ path('dashboard') }}" class="flex items-center text-gray-700">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M22 19a2 2 0 01-2 2H4a2 2 0 01-2-2V5a2 2 0 012-2h5l2 3h9a2 2 0 012 2z"></path>
             </svg>
-            Projects
+            Projets
         </a>
     </li>
 </ul>
+
+
 
                 {# <ul>
                     <li class="px-6 py-4 hover:bg-yellow-100 border-t text-md font-semibold">
@@ -81,7 +85,7 @@
                                 <circle cx="12" cy="12" r="3"></circle>
                                 <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"></path>
                             </svg>
-                            Settings
+                            Paramètres
                         </a>
                     </li>
                     <li class="px-6 py-4 hover:bg-yellow-100 text-md font-semibold">
@@ -91,7 +95,7 @@
                                 <polyline points="16 17 21 12 16 7"></polyline>
                                 <line x1="21" y1="12" x2="9" y2="12"></line>
                             </svg>
-                            Log out
+                           Se déconnecter
                         </a>
                     </li>
                 </ul>
