Affichage des projets créer dans le header sous forme de liste déroulante

--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -36,7 +36,7 @@
     
     <li class="px-6 py-4 hover:bg-yellow-100 border-t text-md font-semibold 
         {{ app.request.attributes.get('_route') == 'project_index' ? 'bg-yellow-100' : '' }}">
-        <a href="{{ path('dashboard') }}" class="flex items-center text-gray-700">
+        <a href="{{ path('projet_index') }}" class="flex items-center text-gray-700">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M22 19a2 2 0 01-2 2H4a2 2 0 01-2-2V5a2 2 0 012-2h5l2 3h9a2 2 0 012 2z"></path>
             </svg>
